Recipes Page styling

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 $primary-color: #302f36;
 $secondary-color: #575c70;
-$bright-color: #e80566;
+$bright-color: #f7408f;
 $accent-color: #ff8d68;
 $background-color1: #f4eabc;
 $background-color2: #b9ccfc;
