--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,45 @@
 @import './styles/variables';
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
 }
 
 .app {
-  background: $background-color2;
+  background: floralwhite;
   width: 300px;
   margin: 10% auto;
+  font-family: $font-lato;
+  min-height: 500px;
+  padding: 20px 30px;
+  color: $primary-color;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 
   @media (min-width: $break-point){
     width: 700px;
+  }
+}
+
+nav {
+  width: 100%;
+}
+.nav {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin: 0 auto;
+  list-style: none;
+  padding: 0;
+
+  a {
+    text-decoration: none;
+    font-family: $font-montserrat;
   }
 }
