--- a/src/components/Ingredients.module.scss
+++ b/src/components/Ingredients.module.scss
@@ -24,6 +24,7 @@
   background: rgba($accent-color, .5);
   border-radius: 2px;
   font-family: $font-montserrat;
+  outline: none;
 
   &:hover {
     background: rgba($accent-color, .3);
